better formatting, better client experience

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	<body>
 		<input placeholder="message" id="submitBox">
 		<button onclick='submit()'>Send</button>
+		<p id="messageSentStatus"></p>
 	</body>
 </html>
